plugins {
    id 'org.jetbrains.kotlin.jvm'
}
architectury {
    common rootProject.enabled_platforms.split(",")
}

loom {
    accessWidenerPath = file("src/main/resources/irobot.accesswidener")
}

dependencies {
    // We depend on fabric loader here to use the fabric @Environment annotations and get the mixin dependencies
    // Do NOT use other classes from fabric loader
    modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
    // Remove the next line if you don't want to depend on the API
    modApi "dev.architectury:architectury:${project.architectury_version}"

    modImplementation "curse.maven:yaml-config-1128669:${project.config_library_file_fabric}-sources-${project.config_library_file_fabric_sources}"
    modImplementation "curse.maven:ui-933200:${project.ui_library_file_fabric}-sources-${project.ui_library_file_fabric_sources}"
    modImplementation "software.bernie.geckolib:geckolib-fabric-${minecraft_version}:${geckolib_version}"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}
repositories {
    mavenCentral()
}
kotlin {
    jvmToolchain(21)
}